--- a/Orientation-API/Orientation-API.csproj
+++ b/Orientation-API/Orientation-API.csproj
@@ -97,8 +97,8 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CustomerRepository.cs" />
-    <Compile Include="Services\OrderController.cs" />
-    <Compile Include="Services\ProductController.cs" />
+    <Compile Include="Services\OrderRepository.cs" />
+    <Compile Include="Services\ProductRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
