--- a/Orientation-API/Orientation-API.csproj
+++ b/Orientation-API/Orientation-API.csproj
@@ -115,7 +115,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\app.js" />
+    <Content Include="app\controllers\ComputersController.js" />
     <Content Include="app\controllers\HomeController.js" />
+    <Content Include="app\partials\computers.html" />
     <Content Include="app\partials\index.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -154,6 +156,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\CompleteOrderDto.cs" />
+    <Compile Include="Models\Computer.cs" />
+    <Compile Include="Models\ComputerOutputDto.cs" />
     <Compile Include="Models\CreateOrderDto.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\PlaceOrderDto.cs" />
