--- a/Orientation-API/Orientation-API.csproj
+++ b/Orientation-API/Orientation-API.csproj
@@ -115,6 +115,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\app.js" />
+    <Content Include="app\controllers\HomeController.js" />
+    <Content Include="app\partials\index.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
@@ -144,6 +146,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
+    <Compile Include="Controllers\EmployeesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
@@ -152,6 +155,8 @@
     </Compile>
     <Compile Include="Models\CompleteOrderDto.cs" />
     <Compile Include="Models\CreateOrderDto.cs" />
+    <Compile Include="Models\EmployeeDto.cs" />
+    <Compile Include="Models\EmployeeModel.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\PlaceOrderDto.cs" />
     <Compile Include="Models\CustomerDto.cs" />
@@ -161,6 +166,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CustomerModifier.cs" />
     <Compile Include="Services\CustomerRepository.cs" />
+    <Compile Include="Services\EmployeeRepository.cs" />
     <Compile Include="Services\OrderRepository.cs" />
     <Compile Include="Services\ProductRepository.cs" />
   </ItemGroup>
@@ -185,8 +191,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="app\controllers\" />
-    <Folder Include="app\partials\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <PropertyGroup>
