--- a/Orientation-API/Orientation-API.csproj
+++ b/Orientation-API/Orientation-API.csproj
@@ -118,9 +118,11 @@
     <Content Include="app\controllers\DepartmentsController.js" />
     <Content Include="app\controllers\ComputersController.js" />
     <Content Include="app\controllers\HomeController.js" />
+    <Content Include="app\controllers\NewComputerController.js" />
     <Content Include="app\partials\departments.html" />
     <Content Include="app\partials\computers.html" />
     <Content Include="app\partials\index.html" />
+    <Content Include="app\partials\newcomputer.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
