--- a/Orientation-API/Orientation-API.csproj
+++ b/Orientation-API/Orientation-API.csproj
@@ -125,6 +125,7 @@
     <Content Include="app\partials\newcomputer.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\computers.css" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
