--- a/Orientation-API/Orientation-API.csproj
+++ b/Orientation-API/Orientation-API.csproj
@@ -116,17 +116,21 @@
   <ItemGroup>
     <Content Include="app\app.js" />
     <Content Include="app\controllers\CreateDepartmentController.js" />
+    <Content Include="app\controllers\CreateTrainingController.js" />
     <Content Include="app\controllers\DepartmentsController.js" />
     <Content Include="app\controllers\ComputersController.js" />
     <Content Include="app\controllers\EmployeesController.js" />
     <Content Include="app\controllers\HomeController.js" />
+    <Content Include="app\controllers\TrainingProgramController.js" />
     <Content Include="app\partials\create-department.html" />
     <Content Include="app\controllers\NewComputerController.js" />
+    <Content Include="app\partials\createTraining.html" />
     <Content Include="app\partials\departments.html" />
     <Content Include="app\partials\computers.html" />
     <Content Include="app\partials\employees.html" />
     <Content Include="app\partials\index.html" />
     <Content Include="app\partials\newcomputer.html" />
+    <Content Include="app\partials\TrainingPrograms.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\computers.css" />
@@ -180,6 +184,7 @@
     <Compile Include="Models\CustomerModel.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\StatusCode.cs" />
+    <Compile Include="Models\TrainingProgramDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ComputerModifier.cs" />
     <Compile Include="Services\ComputerRespository.cs" />
@@ -212,6 +217,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\CreateTraining\" />
     <Folder Include="Views\Departments\" />
   </ItemGroup>
   <PropertyGroup>
