--- a/Orientation-API/Orientation-API.csproj
+++ b/Orientation-API/Orientation-API.csproj
@@ -125,6 +125,7 @@
     <Content Include="app\controllers\NewEmployeeController.js" />
     <Content Include="app\controllers\TrainingProgramController.js" />
     <Content Include="app\controllers\TrainingProgramDetailsController.js" />
+    <Content Include="app\controllers\TrainingProgramEditController.js" />
     <Content Include="app\partials\create-department.html" />
     <Content Include="app\controllers\NewComputerController.js" />
     <Content Include="app\partials\deletecomputer.html" />
@@ -135,6 +136,7 @@
     <Content Include="app\partials\index.html" />
     <Content Include="app\partials\newcomputer.html" />
     <Content Include="app\partials\TrainingProgramDetails.html" />
+    <Content Include="app\partials\TrainingProgramEdit.html" />
     <Content Include="app\partials\TrainingPrograms.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
