added methods for getting employees by training

--- a/Orientation-API/Orientation-API.csproj
+++ b/Orientation-API/Orientation-API.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\StatusCode.cs" />
     <Compile Include="Models\TrainingProgramDto.cs" />
+    <Compile Include="Models\TrainingProgramModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ComputerModifier.cs" />
     <Compile Include="Services\ComputerRespository.cs" />
