--- a/Orientation-API/Orientation-API.csproj
+++ b/Orientation-API/Orientation-API.csproj
@@ -118,14 +118,13 @@
     <Content Include="app\controllers\CreateDepartmentController.js" />
     <Content Include="app\controllers\DeleteComputerController.js" />
     <Content Include="app\controllers\CreateTrainingController.js" />
+    <Content Include="app\controllers\DepartmentDetailsController.js" />
     <Content Include="app\controllers\DepartmentsController.js" />
     <Content Include="app\controllers\ComputersController.js" />
     <Content Include="app\controllers\EmployeesController.js" />
     <Content Include="app\controllers\HomeController.js" />
     <Content Include="app\controllers\NewEmployeeController.js" />
     <Content Include="app\controllers\TrainingProgramController.js" />
-    <Content Include="app\controllers\TrainingProgramDetailsController.js" />
-    <Content Include="app\controllers\TrainingProgramEditController.js" />
     <Content Include="app\partials\create-department.html" />
     <Content Include="app\controllers\NewComputerController.js" />
     <Content Include="app\partials\deletecomputer.html" />
@@ -135,8 +134,7 @@
     <Content Include="app\partials\employees.html" />
     <Content Include="app\partials\index.html" />
     <Content Include="app\partials\newcomputer.html" />
-    <Content Include="app\partials\TrainingProgramDetails.html" />
-    <Content Include="app\partials\TrainingProgramEdit.html" />
+    <Content Include="app\partials\newemployee.html" />
     <Content Include="app\partials\TrainingPrograms.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -186,7 +184,6 @@
     <Compile Include="Models\EmployeeDto.cs" />
     <Compile Include="Models\DepartmentsDto.cs" />
     <Compile Include="Models\EmployeeModel.cs" />
-    <Compile Include="Models\EmployeeTrainingDto.cs" />
     <Compile Include="Models\NewEmployeeDto.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\PlaceOrderDto.cs" />
@@ -195,7 +192,6 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\StatusCode.cs" />
     <Compile Include="Models\TrainingProgramDto.cs" />
-    <Compile Include="Models\TrainingProgramModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ComputerModifier.cs" />
     <Compile Include="Services\ComputerRespository.cs" />
