--- a/Orientation-API/Orientation-API.csproj
+++ b/Orientation-API/Orientation-API.csproj
@@ -129,6 +129,7 @@
     <Content Include="app\controllers\NewComputerController.js" />
     <Content Include="app\partials\deletecomputer.html" />
     <Content Include="app\partials\createTraining.html" />
+    <Content Include="app\partials\DepartmentDetails.html" />
     <Content Include="app\partials\departments.html" />
     <Content Include="app\partials\computers.html" />
     <Content Include="app\partials\employees.html" />
@@ -181,6 +182,7 @@
     <Compile Include="Models\ComputerDto.cs" />
     <Compile Include="Models\ComputerOutputDto.cs" />
     <Compile Include="Models\CreateOrderDto.cs" />
+    <Compile Include="Models\DepartmentModel.cs" />
     <Compile Include="Models\EmployeeDto.cs" />
     <Compile Include="Models\DepartmentsDto.cs" />
     <Compile Include="Models\EmployeeModel.cs" />
