delete training button routing to delete partial

--- a/Orientation-API/Orientation-API.csproj
+++ b/Orientation-API/Orientation-API.csproj
@@ -124,6 +124,7 @@
     <Content Include="app\controllers\HomeController.js" />
     <Content Include="app\controllers\NewEmployeeController.js" />
     <Content Include="app\controllers\TrainingProgramController.js" />
+    <Content Include="app\controllers\TrainingProgramDeleteController.js" />
     <Content Include="app\controllers\TrainingProgramDetailsController.js" />
     <Content Include="app\controllers\TrainingProgramEditController.js" />
     <Content Include="app\partials\create-department.html" />
@@ -135,6 +136,7 @@
     <Content Include="app\partials\employees.html" />
     <Content Include="app\partials\index.html" />
     <Content Include="app\partials\newcomputer.html" />
+    <Content Include="app\partials\TrainingProgramDelete.html" />
     <Content Include="app\partials\TrainingProgramDetails.html" />
     <Content Include="app\partials\TrainingProgramEdit.html" />
     <Content Include="app\partials\TrainingPrograms.html" />
